--- a/public/css/index.css
+++ b/public/css/index.css
@@ -28,6 +28,7 @@
 
 .table {
     width: 100%;
+    margin: 2rem auto;
     border-collapse: collapse;
     box-shadow: 0 4px 4px 2px rgba(0, 0, 0, 0.15);
     border-radius: 8px;
@@ -39,9 +40,15 @@
     color: white;
 }
 
-.table th,
-.table td {
+.table th {
     color: white;
+    padding: 1rem;
+    text-align: left;
+    border-bottom: 1px solid #ccc;
+    font-size: 1rem;
+}
+.table td {
+    color: black;
     padding: 1rem;
     text-align: left;
     border-bottom: 1px solid #ccc;
@@ -50,6 +57,20 @@
 
 .table tbody tr:hover {
     background-color: #f1f1f1;
+}
+
+.add-button {
+    background-color: #0D6AB8;
+    color: white;
+    padding: 0.6rem 1.2rem;
+    margin: 1rem auto;
+    text-decoration: none;
+    border-radius: 10px;
+    transition: background 0.2s ease-in-out;
+}
+
+.add-button:hover {
+    background-color: #094f8a;
 }
 
 .icon-index {
@@ -67,7 +88,6 @@
     padding: 0.4rem 0.8rem;
     border-radius: 5px;
     text-decoration: none;
-    font-weight: bold;
     transition: 0.2s ease;
 }
 
@@ -81,4 +101,13 @@
     color: #777;
     font-size: 1rem;
     margin-top: 2rem;
+}
+
+.alert-success {
+    background-color: #e0f3e7;
+    color: #0f5132;
+    padding: 1rem;
+    border-radius: 5px;
+    margin: 3rem 0 1.5rem 0;
+    font-weight: bold;
 }
